--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "dependencies": {
     "babel-runtime": "^6.23.0",
     "bcrypt": "^1.0.2",
-    "blessed": "^0.1.81",
     "markdown-it": "^8.3.1",
-    "meteor-node-stubs": "~0.2.4",
-    "telnet2": "0.0.1"
+    "meteor-node-stubs": "~0.2.4"
   }
 }
